added gitignore and modified output

--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 criticality: 4
-rows: 3
-columns: 3
-input: 'in_map.txt'
+rows: 10
+columns: 10
+input: ''
 output: 
   map: 'out_map.txt'
   data: 'output.txt'
