--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 criticality: 4
-rows: 10
-columns: 10
-input: ''
+rows: 3
+columns: 3
+input: 'data/in_map.txt'
 output: 
   map: 'data/out_map.txt'
   data: 'data/output.txt'
