--- a/ex_config.yml
+++ b/ex_config.yml
@@ -6,7 +6,7 @@ d_probability: 0.00005
 n_runs: 20
 delta_t: 10
 running: False
-input: 'data/256map.txt'
+input: ''
 zhang: False
 z_threshold: 1
 z_epsilon: 0.3
