Make program options work

--- a/sandpilesCpp/CMakeLists.txt
+++ b/sandpilesCpp/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.17)
-project(sandpilesCpp)
+project(btwsim)
 
 set(CMAKE_CXX_STANDARD 20)
+FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 
-add_executable(sandpilesCpp Simulator.cpp BTWModel.h BTWModel.cpp)
+add_executable(btwsim Simulator.cpp BTWModel.h BTWModel.cpp)
+TARGET_LINK_LIBRARIES(btwsim ${Boost_LIBRARIES})
