--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,19 @@ cmake-build-debug
 env
 .ipynb_checkpoints
 *.out
+*.cbp
+
+
+# Cmake stuff
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
