Forest fire model

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,9 @@ set(BINARY ${CMAKE_PROJECT_NAME})
 include_directories(${Boost_INCLUDE_DIRS})
 
 set(BINARY ${CMAKE_PROJECT_NAME})
-set(SOURCES Simulator.cpp BTWModel.h BTWModel.cpp)
+set(SOURCES Simulator.cpp BTWModel.h BTWModel.cpp ForestFireModel.cpp ForestFireModel.h ModelUtils.cpp ModelUtils.h)
 
-add_executable(btwsim ${SOURCES} ForestFireModel.cpp ForestFireModel.h)
+add_executable(btwsim ${SOURCES})
 
 add_library(${BINARY}_lib STATIC ${SOURCES})
-target_link_libraries (${BINARY} ${Boost_LIBRARIES})
+target_link_libraries(${BINARY} ${Boost_LIBRARIES} ${Boost_LOG_LIBRARY})
