--- a/test/tests/CMakeLists.txt
+++ b/test/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB SRCS *.cpp)
 set(BINARY ${CMAKE_PROJECT_NAME}_tst)
 
-add_executable(${BINARY} ${SRCS} BTWClassicalDynamics.cpp BTWRandom2Dynamics.cpp)
+add_executable(${BINARY} ${SRCS} BTWClassicalDynamics.cpp BTWRandom2Dynamics.cpp BTWDeterministicNNNTest.cpp)
 
 target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib libgtest)
 
